--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -467,97 +467,99 @@
     Footer
     --------------------->
     <footer class="footer">
-        <div class="footer__content container">
-            <div class="footer__content-left">
-                <a href="#" class="logo">
-                    <img src="./img/logo.png" alt="logo">
-                </a>
+        <div class="footer-content container">
+            <div class="card ">
+                <div class="card-header">
+                    <a href="#" class="logo">
+                        <img src="./img/logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="card-body">
                     <p class="font--small">
                         We built an elegant solution.<br>
                         Our team created a fully integrated sales<br>
                         and marketing solution for SMBs</p>
-                <ul class="media menu__list">
+                </div>
+                <div class="card-footer">
+                    <ul class="media menu-list">
                         <li>
-                            <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
+                            <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
+                                    alt="Here is a logo of the media above" class="media-icon"></a>
                         </li>
                         <li>
-                            <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
+                            <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png"
+                                    alt="Here is a logo of the media above" class="media-icon"></a>
                         </li>
                         <li>
-                            <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
+                            <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png"
+                                    alt="Here is a logo of the media above" class="media-icon"></a>
+                        </li>
                     </ul>
-
+                </div>
             </div>
-            <div class="footer__content-right">
-                <div class="footer__menu">
-                    <ul class="menu__list ">
-                        <li class="list__item"><a class="list--mark item " href="#">Company</a></li>
-                        <li class="list__item"><a class="item" href="#">About</a></li>
-                        <li class="list__item"><a class="item" href="#">Pricing</a></li>
-                        <li class="list__item"><a class="item" href="#">Jobs</a></li>
-                        <li class="list__item"><a class="item" href="#">Blog</a></li>
-                        <li class="list__item"><a class="item" href="#">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="footer__menu">
-                    <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark item" href="#">Product</a></li>
-                        <li class="list__item"><a class="item" href="#">Sales software</a></li>
-                        <li class="list__item"><a class="item" href="#">Features</a></li>
-                        <li class="list__item"><a class="item" href="#">Privacy and security</a></li>
-                        <li class="list__item"><a class="item" href="#">Marketplace</a></li>
-                        <li class="list__item"><a class="item" href="#">Status</a></li>
-                        <li class="list__item"><a class="item" href="#">API</a></li>
-                    </ul>
-                </div>
-                <div class="footer__menu">
-                    <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark item" href="#">Discover</a></li>
-                        <li class="list__item"><a class="item" href="#">Partner Program</a></li>
-                        <li class="list__item"><a class="item" href="#">Get our newsletter</a></li>
-                        <li class="list__item"><a class="item" href="#">Sales Pipeline Course</a></li>
-                        <li class="list__item"><a class="item" href="#">What is CRM?</a></li>
-                        <li class="list__item"><a class="item" href="#">CRM Comparison</a></li>
-                        <li class="list__item"><a class="item" href="#">Resources</a></li>
-                    </ul>
-                </div>
-                <div class="footer__menu">
-                    <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark item" href="#">Help Center</a></li>
-                        <li class="list__item"><a class="item" href="#">Community</a></li>
-                        <li class="list__item"><a class="item" href="#">Knowledge Base</a></li>
-                        <li class="list__item"><a class="item" href="#">Academy</a></li>
-                        <li class="list__item"><a class="item" href="#">Support</a></li>
-                    </ul>
-                </div>
+            <div class="footer-menu nav-menu">
+                <ul class="menu-list font--small">
+                    <a href="#" class="item">Company</a>
+                    <li class="list-item"><a class="item" href="#">About</a></li>
+                    <li class="list-item"><a class="item" href="#">Pricing</a></li>
+                    <li class="list-item"><a class="item" href="#">Jobs</a></li>
+                    <li class="list-item"><a class="item" href="#">Blog</a></li>
+                    <li class="list-item"><a class="item" href="#">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu nav-menu">
+                <ul class="menu-list font--small">
+                    <a href="#" class="item">Product</a>
+                    <li class="list-item"><a class="item" href="#">Sales software</a></li>
+                    <li class="list-item"><a class="item" href="#">Features</a></li>
+                    <li class="list-item"><a class="item" href="#">Privacy and security</a></li>
+                    <li class="list-item"><a class="item" href="#">Marketplace</a></li>
+                    <li class="list-item"><a class="item" href="#">Status</a></li>
+                    <li class="list-item"><a class="item" href="#">API</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu nav-menu">
+                <ul class="menu-list font--small">
+                    <a href="#" class="item">Discover</a>
+                    <li class="list-item"><a class="item" href="#">Partner Program</a></li>
+                    <li class="list-item"><a class="item" href="#">Get our newsletter</a></li>
+                    <li class="list-item"><a class="item" href="#">Sales Pipeline Course</a></li>
+                    <li class="list-item"><a class="item" href="#">What is CRM?</a></li>
+                    <li class="list-item"><a class="item" href="#">CRM Comparison</a></li>
+                    <li class="list-item"><a class="item" href="#">Resources</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu nav-menu">
+                <ul class="menu-list font--small">
+                    <a href="#" class="item">Help Center</a>
+                    <li class="list-item"><a class="item" href="#">Community</a></li>
+                    <li class="list-item"><a class="item" href="#">Knowledge Base</a></li>
+                    <li class="list-item"><a class="item" href="#">Academy</a></li>
+                    <li class="list-item"><a class="item" href="#">Support</a></li>
+                </ul>
             </div>
 
         </div>
-
-        <hr class="footer__line">
-
-        <div class="footer__rule text--black container ">
-            <a class="rule__copyright" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
-
-            <div class="footer__rule-right">
-                <ul class="rule__menu menu__list">
-                    <li><a class="item" href="#">Terms of Service</a></li>
-                    <li><a class="item" href="#">Privacy Police</a></li>
-                    <li><a class="item" href="#">Cookies</a></li>
+        <hr class="line ">
+        <div class="footer-about container">
+            <div class="nav-menu ">
+                <a class="item text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
+                <ul class="menu-list">
+                    <li class="list-item"><a class="item" href="#">Terms of Service</a></li>
+                    <li class="list-item"><a class="item" href="#">Privacy Police</a></li>
+                    <li class="list-item"><a class="item" href="#">Cookie</a></li>
                 </ul>
-                <div class="rule__locale">
-                        <img src="./img/Shape.png" alt=" this is the icon for the change language button"
-                            class="btn__icon">
-                        <select class="btn--flex" name="language" id="language">
-                            <option value="volvo">English</option>
-                            <option value="saab">Vietnamese</option>
+                <div class="footer-locale">
+                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn-icon">
+                    <select class="btn--flex" name="language" id="language">
+                        <option value="volvo">English</option>
+                        <option value="saab">Vietnamese</option>
                     </select>
                 </div>
             </div>
-
         </div>
 
-    </footer>
+    </footer> 
 
 
 
