--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -531,7 +531,7 @@
             </div>
             <div class="footer-menu nav-menu">
                 <ul class="menu-list font--small">
-                    <a href="#" class="item">Help Center</a>
+                    <a href="#" class="item" >Help Center</a>
                     <li class="list-item"><a class="item" href="#">Community</a></li>
                     <li class="list-item"><a class="item" href="#">Knowledge Base</a></li>
                     <li class="list-item"><a class="item" href="#">Academy</a></li>
@@ -543,7 +543,9 @@
         <hr class="line ">
         <div class="footer-about container">
             <div class="nav-menu ">
-                <a class="item text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
+                <h3 class="item ">
+                    <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
+                </h3>
                 <ul class="menu-list">
                     <li class="list-item"><a class="item" href="#">Terms of Service</a></li>
                     <li class="list-item"><a class="item" href="#">Privacy Police</a></li>
