Fix : Fix comment naming class

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -541,7 +541,7 @@
 
         </div>
         <hr class="line ">
-        <div class="footer-about container">
+        <div class="footer-rule container">
             <div class="nav-menu ">
                 <h3 class="item ">
                     <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
