Fix : fix comment naming class

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -475,7 +475,7 @@
                     </a>
                 </div>
                 <div class="card-body">
-                    <p class="font--small">
+                    <p class="heading-sm">
                         We built an elegant solution.<br>
                         Our team created a fully integrated sales<br>
                         and marketing solution for SMBs</p>
@@ -498,7 +498,7 @@
                 </div>
             </div>
             <div class="footer-menu nav-menu">
-                <ul class="menu-list font--small">
+                <ul class="menu-list heading-sm">
                     <a href="#" class="item">Company</a>
                     <li class="list-item"><a class="item" href="#">About</a></li>
                     <li class="list-item"><a class="item" href="#">Pricing</a></li>
@@ -508,7 +508,7 @@
                 </ul>
             </div>
             <div class="footer-menu nav-menu">
-                <ul class="menu-list font--small">
+                <ul class="menu-list heading-sm">
                     <a href="#" class="item">Product</a>
                     <li class="list-item"><a class="item" href="#">Sales software</a></li>
                     <li class="list-item"><a class="item" href="#">Features</a></li>
@@ -519,7 +519,7 @@
                 </ul>
             </div>
             <div class="footer-menu nav-menu">
-                <ul class="menu-list font--small">
+                <ul class="menu-list heading-sm">
                     <a href="#" class="item">Discover</a>
                     <li class="list-item"><a class="item" href="#">Partner Program</a></li>
                     <li class="list-item"><a class="item" href="#">Get our newsletter</a></li>
@@ -530,7 +530,7 @@
                 </ul>
             </div>
             <div class="footer-menu nav-menu">
-                <ul class="menu-list font--small">
+                <ul class="menu-list heading-sm">
                     <a href="#" class="item" >Help Center</a>
                     <li class="list-item"><a class="item" href="#">Community</a></li>
                     <li class="list-item"><a class="item" href="#">Knowledge Base</a></li>
