Fix : fix comment naming class

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -56,7 +56,7 @@
             </nav>
 
             <div class="header-carousel">
-                <p class="text-black heading-lg">New and insights <br>
+                <p class="text-black text-lg">New and insights <br>
                     <span class="text-black-50">form our experts</span>
                 </p>
             </div>
@@ -436,12 +436,12 @@
         <div class="cta-content card container">
             <div class="card-body  ">
                 <div class="card-text ">
-                    <h1 class="heading-lg" href="#">
+                    <h1 class="text-lg" href="#">
                         <a href="#" class="text-white">
                             Ready to supercharge your business?
                         </a>
                     </h1>
-                    <p class="text-white-50 heading-md">
+                    <p class="text-white-50 text-md">
                         Ask about Yoora products, pricing, implementation, or anything else.
                         Our highly trained reps are standing by, ready to help.
                     </p>
@@ -452,7 +452,7 @@
                     Try For Free
                     <img class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
                 </button>
-                <span class="heading-sm text-white">Full access. No credit card required.</span>
+                <span class="text-sm text-white">Full access. No credit card required.</span>
             </div>
         </div>
     </section>
@@ -475,7 +475,7 @@
                     </a>
                 </div>
                 <div class="card-body">
-                    <p class="heading-sm">
+                    <p class="text-sm">
                         We built an elegant solution.<br>
                         Our team created a fully integrated sales<br>
                         and marketing solution for SMBs</p>
@@ -498,7 +498,7 @@
                 </div>
             </div>
             <div class="footer-menu nav-menu">
-                <ul class="menu-list heading-sm">
+                <ul class="menu-list text-sm">
                     <a href="#" class="item">Company</a>
                     <li class="list-item"><a class="item" href="#">About</a></li>
                     <li class="list-item"><a class="item" href="#">Pricing</a></li>
@@ -508,7 +508,7 @@
                 </ul>
             </div>
             <div class="footer-menu nav-menu">
-                <ul class="menu-list heading-sm">
+                <ul class="menu-list text-sm">
                     <a href="#" class="item">Product</a>
                     <li class="list-item"><a class="item" href="#">Sales software</a></li>
                     <li class="list-item"><a class="item" href="#">Features</a></li>
@@ -519,7 +519,7 @@
                 </ul>
             </div>
             <div class="footer-menu nav-menu">
-                <ul class="menu-list heading-sm">
+                <ul class="menu-list text-sm">
                     <a href="#" class="item">Discover</a>
                     <li class="list-item"><a class="item" href="#">Partner Program</a></li>
                     <li class="list-item"><a class="item" href="#">Get our newsletter</a></li>
@@ -530,7 +530,7 @@
                 </ul>
             </div>
             <div class="footer-menu nav-menu">
-                <ul class="menu-list heading-sm">
+                <ul class="menu-list text-sm">
                     <a href="#" class="item" >Help Center</a>
                     <li class="list-item"><a class="item" href="#">Community</a></li>
                     <li class="list-item"><a class="item" href="#">Knowledge Base</a></li>
