Fix : fix btn--flex name

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -551,9 +551,9 @@
                     <li class="list-item"><a class="item" href="#">Privacy Police</a></li>
                     <li class="list-item"><a class="item" href="#">Cookie</a></li>
                 </ul>
-                <div class="footer-locale">
+                <div class="dropdown">
                     <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn-icon">
-                    <select class="btn--flex" name="language" id="language">
+                    <select class="btn dropdown-toggle" name="language" id="language">
                         <option value="volvo">English</option>
                         <option value="saab">Vietnamese</option>
                     </select>
