--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -540,7 +540,7 @@
             </div>
 
         </div>
-        <hr class="line ">
+        <hr class="divider ">
         <div class="footer-rule container">
             <div class="nav-menu ">
                 <h3 class="item ">
