--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -552,7 +552,7 @@
                     <li class="list-item"><a class="item" href="#">Cookie</a></li>
                 </ul>
                 <div class="dropdown">
-                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn-icon">
+                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" >
                     <select class="btn dropdown-toggle" name="language" id="language">
                         <option value="volvo">English</option>
                         <option value="saab">Vietnamese</option>
