Fix : class media footer

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -484,15 +484,15 @@
                     <ul class="media menu-list">
                         <li>
                             <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
-                                    alt="Here is a logo of the media above" class="media-icon"></a>
+                                    alt="Here is a logo of the media above"></a>
                         </li>
                         <li>
                             <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png"
-                                    alt="Here is a logo of the media above" class="media-icon"></a>
+                                    alt="Here is a logo of the media above"></a>
                         </li>
                         <li>
                             <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png"
-                                    alt="Here is a logo of the media above" class="media-icon"></a>
+                                    alt="Here is a logo of the media above"></a>
                         </li>
                     </ul>
                 </div>
@@ -540,7 +540,9 @@
             </div>
 
         </div>
+
         <hr class="divider ">
+
         <div class="footer-rule container">
             <div class="nav-menu ">
                 <h3 class="item ">
