Fix : btn--chervon

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -448,9 +448,9 @@
                 </div>
             </div>
             <div class="card-footer ">
-                <button class="btn btn--chevron">
+                <button class="btn btn-primary">
                     Try For Free
-                    <img class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
+                    <img src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
                 </button>
                 <span class="text-sm text-white">Full access. No credit card required.</span>
             </div>
