--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -56,7 +56,7 @@
             </nav>
 
             <div class="header-carousel">
-                <p class="text-black heading-lg">New and insights <br>
+                <p class="text-black text-lg">New and insights <br>
                     <span class="text-black-50">form our experts</span>
                 </p>
             </div>
@@ -436,23 +436,23 @@
         <div class="cta-content card container">
             <div class="card-body  ">
                 <div class="card-text ">
-                    <h1 class="heading-lg" href="#">
+                    <h1 class="text-lg" href="#">
                         <a href="#" class="text-white">
                             Ready to supercharge your business?
                         </a>
                     </h1>
-                    <p class="text-white-50 heading-md">
+                    <p class="text-white-50 text-md">
                         Ask about Yoora products, pricing, implementation, or anything else.
                         Our highly trained reps are standing by, ready to help.
                     </p>
                 </div>
             </div>
             <div class="card-footer ">
-                <button class="btn btn--chevron">
+                <button class="btn btn-primary">
                     Try For Free
-                    <img class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
+                    <img src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
                 </button>
-                <span class="heading-sm text-white">Full access. No credit card required.</span>
+                <span class="text-sm text-white">Full access. No credit card required.</span>
             </div>
         </div>
     </section>
@@ -467,94 +467,100 @@
     Footer
     --------------------->
     <footer class="footer">
-        <div class="footer__content container">
-            <div class="footer__content-left">
-                <a href="#" class="logo">
-                    <img src="./img/logo.png" alt="logo">
-                </a>
-                    <p class="font--small">
+        <div class="footer-content container">
+            <div class="card ">
+                <div class="card-header">
+                    <a href="#" class="logo">
+                        <img src="./img/logo.png" alt="logo">
+                    </a>
+                </div>
+                <div class="card-body">
+                    <p class="text-sm">
                         We built an elegant solution.<br>
                         Our team created a fully integrated sales<br>
                         and marketing solution for SMBs</p>
-                <ul class="media menu__list">
+                </div>
+                <div class="card-footer">
+                    <ul class="media menu-list">
                         <li>
-                            <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
+                            <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png"
+                                    alt="Here is a logo of the media above"></a>
                         </li>
                         <li>
-                            <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
+                            <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png"
+                                    alt="Here is a logo of the media above"></a>
                         </li>
                         <li>
-                            <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
+                            <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png"
+                                    alt="Here is a logo of the media above"></a>
+                        </li>
                     </ul>
-
+                </div>
             </div>
-            <div class="footer__content-right">
-                <div class="footer__menu">
-                    <ul class="menu__list ">
-                        <li class="list__item"><a class="list--mark item " href="#">Company</a></li>
-                        <li class="list__item"><a class="item" href="#">About</a></li>
-                        <li class="list__item"><a class="item" href="#">Pricing</a></li>
-                        <li class="list__item"><a class="item" href="#">Jobs</a></li>
-                        <li class="list__item"><a class="item" href="#">Blog</a></li>
-                        <li class="list__item"><a class="item" href="#">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="footer__menu">
-                    <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark item" href="#">Product</a></li>
-                        <li class="list__item"><a class="item" href="#">Sales software</a></li>
-                        <li class="list__item"><a class="item" href="#">Features</a></li>
-                        <li class="list__item"><a class="item" href="#">Privacy and security</a></li>
-                        <li class="list__item"><a class="item" href="#">Marketplace</a></li>
-                        <li class="list__item"><a class="item" href="#">Status</a></li>
-                        <li class="list__item"><a class="item" href="#">API</a></li>
-                    </ul>
-                </div>
-                <div class="footer__menu">
-                    <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark item" href="#">Discover</a></li>
-                        <li class="list__item"><a class="item" href="#">Partner Program</a></li>
-                        <li class="list__item"><a class="item" href="#">Get our newsletter</a></li>
-                        <li class="list__item"><a class="item" href="#">Sales Pipeline Course</a></li>
-                        <li class="list__item"><a class="item" href="#">What is CRM?</a></li>
-                        <li class="list__item"><a class="item" href="#">CRM Comparison</a></li>
-                        <li class="list__item"><a class="item" href="#">Resources</a></li>
-                    </ul>
-                </div>
-                <div class="footer__menu">
-                    <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark item" href="#">Help Center</a></li>
-                        <li class="list__item"><a class="item" href="#">Community</a></li>
-                        <li class="list__item"><a class="item" href="#">Knowledge Base</a></li>
-                        <li class="list__item"><a class="item" href="#">Academy</a></li>
-                        <li class="list__item"><a class="item" href="#">Support</a></li>
-                    </ul>
-                </div>
+            <div class="footer-menu nav-menu">
+                <ul class="menu-list text-sm">
+                    <a href="#" class="item">Company</a>
+                    <li class="list-item"><a class="item" href="#">About</a></li>
+                    <li class="list-item"><a class="item" href="#">Pricing</a></li>
+                    <li class="list-item"><a class="item" href="#">Jobs</a></li>
+                    <li class="list-item"><a class="item" href="#">Blog</a></li>
+                    <li class="list-item"><a class="item" href="#">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu nav-menu">
+                <ul class="menu-list text-sm">
+                    <a href="#" class="item">Product</a>
+                    <li class="list-item"><a class="item" href="#">Sales software</a></li>
+                    <li class="list-item"><a class="item" href="#">Features</a></li>
+                    <li class="list-item"><a class="item" href="#">Privacy and security</a></li>
+                    <li class="list-item"><a class="item" href="#">Marketplace</a></li>
+                    <li class="list-item"><a class="item" href="#">Status</a></li>
+                    <li class="list-item"><a class="item" href="#">API</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu nav-menu">
+                <ul class="menu-list text-sm">
+                    <a href="#" class="item">Discover</a>
+                    <li class="list-item"><a class="item" href="#">Partner Program</a></li>
+                    <li class="list-item"><a class="item" href="#">Get our newsletter</a></li>
+                    <li class="list-item"><a class="item" href="#">Sales Pipeline Course</a></li>
+                    <li class="list-item"><a class="item" href="#">What is CRM?</a></li>
+                    <li class="list-item"><a class="item" href="#">CRM Comparison</a></li>
+                    <li class="list-item"><a class="item" href="#">Resources</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu nav-menu">
+                <ul class="menu-list text-sm">
+                    <a href="#" class="item" >Help Center</a>
+                    <li class="list-item"><a class="item" href="#">Community</a></li>
+                    <li class="list-item"><a class="item" href="#">Knowledge Base</a></li>
+                    <li class="list-item"><a class="item" href="#">Academy</a></li>
+                    <li class="list-item"><a class="item" href="#">Support</a></li>
+                </ul>
             </div>
 
         </div>
 
-        <hr class="footer__line">
+        <hr class="divider ">
 
-        <div class="footer__rule text--black container ">
-            <a class="rule__copyright" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
-
-            <div class="footer__rule-right">
-                <ul class="rule__menu menu__list">
-                    <li><a class="item" href="#">Terms of Service</a></li>
-                    <li><a class="item" href="#">Privacy Police</a></li>
-                    <li><a class="item" href="#">Cookies</a></li>
+        <div class="footer-rule container">
+            <div class="nav-menu ">
+                <h3 class="item ">
+                    <a class="text-black-50" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
+                </h3>
+                <ul class="menu-list">
+                    <li class="list-item"><a class="item" href="#">Terms of Service</a></li>
+                    <li class="list-item"><a class="item" href="#">Privacy Police</a></li>
+                    <li class="list-item"><a class="item" href="#">Cookie</a></li>
                 </ul>
-                <div class="rule__locale">
-                        <img src="./img/Shape.png" alt=" this is the icon for the change language button"
-                            class="btn__icon">
-                        <select class="btn--flex" name="language" id="language">
-                            <option value="volvo">English</option>
-                            <option value="saab">Vietnamese</option>
+                <div class="dropdown">
+                    <img src="./img/Shape.png" alt=" this is the icon for the change language button" >
+                    <select class="btn dropdown-toggle" name="language" id="language">
+                        <option value="volvo">English</option>
+                        <option value="saab">Vietnamese</option>
                     </select>
                 </div>
             </div>
-
         </div>
 
     </footer>
