--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -13,11 +13,6 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <!-- Bootstrap-icon -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-    />
     <!-- index CSS -->
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
@@ -26,10 +21,10 @@
     <!-------------------
      Header
     --------------------->
-    <header class="header pb-4">
+    <header class="header">
       <div class="container">
-        <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="../practice-02/index.html">
+        <nav class="navbar navbar-expand-lg py-3">
+          <a class="navbar-brand  " href="../practice-02/index.html">
             <img src="./img/logo.png" alt="logo" />
           </a>
           <button
@@ -48,7 +43,7 @@
             aria-labelledby="offcanvasNavbarLabel"
           >
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Navbar</h5>
+              <h5 class="offcanvas-title display-5" id="offcanvasNavbarLabel">Yoora menu</h5>
               <button
                 type="button"
                 class="btn-close"
@@ -92,364 +87,8 @@
           </div>
         </nav>
       </div>
-
-      <div class="container">
-        <div class="row row-cols-lg-2 pt-4" tabindex="-1">
-          <h1 class="display-1 text-black-50 pb-3">
-            <a class="text-black">Choose the right plan</a> for your business
-          </h1>
-          <p class="fs-6">
-            Built with love for growing businesses. Check out the Yoora CRM
-            pricing grid below. Switch between plans at any time.
-          </p>
-        </div>
-      </div>
-    </header>
     <!-------------------
      Header end
-    --------------------->
-
-    <!-------------------
-     main
-    --------------------->
-    <main class="main">
-      <!-- card-item -->
-      <div class="container">
-        <div class="row row-cols-1 row-cols-md-3 mb-5">
-          <div class="col">
-            <!-- card-1 -->
-            <div class="card mb-4 rounded-3 shadow-lg">
-              <!-- card-header -->
-              <div class="card-header mt-2 py-3">
-                <h3 class="my-0 display-3">Starter</h3>
-                <p class="mt-2 fs-6">
-                  Get organized and set up simple sales processes lorem ipsum
-                </p>
-              </div>
-              <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
-                  <strong class="display-1"> $8,90 </strong>
-                  <small class="text-muted">/month</small>
-                </h1>
-                <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
-                  Try for Free
-                </button>
-                <p class="text-muted">
-                  Free 14-day trial. No credit card required.
-                </p>
-              </div>
-              <hr class="divider" />
-              <!-- card-footer -->
-              <div class="card-footer">
-                <ul class="list mt-3 mb-4">
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>2 team members</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>1,000 Contacts & Companies</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>5 Campaign Workflows</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>10 Nodes Per Campaign</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>5 Automation Rules (Triggers)</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>3 Plugins/Integrations</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p class="text-decoration-line-through text-black-50">
-                      Marketing Automation
-                    </p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p class="text-decoration-line-through text-black-50">
-                      Custom Deal Tracks
-                    </p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p class="text-decoration-line-through text-black-50">
-                      Automated Voicemails
-                    </p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p class="text-decoration-line-through text-black-50">
-                      Post-call Automation
-                    </p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <!-- card-2 -->
-            <div class="card mb-4 rounded-3 shadow-lg">
-              <!-- card-header -->
-              <div class="card-header mt-2 py-3">
-                <h3 class="my-0 display-3">Professional</h3>
-                <span
-                  class="badge bg-success bg-opacity-10 text-uppercase"
-                  style="color: var(--alienated); border-radius: 4px ; font-weight: 700; "
-                  >Recommended
-                </span>
-                <p class="mt-2 fs-6">
-                  Everything you need to boost performance and revenue lorem ips
-                </p>
-              </div>
-              <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
-                  <strong class="display-1">$29,90 </strong>
-                  <small class="text-muted">/month</small>
-                </h1>
-                <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
-                  Try for Free
-                </button>
-                <p class="text-muted">
-                  Free 14-day trial. No credit card required.
-                </p>
-              </div>
-              <hr class="divider" />
-              <!-- card-footer -->
-              <div class="card-footer">
-                <ul class="list mt-3 mb-4">
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>10 team members</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>2,500 Contacts & Companies</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>5 Campaign Workflows</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>10 Nodes Per Campaignn</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>5 Automation Rules (Triggers)</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>3 Plugins/Integrations</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>Marketing Automation</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>Custom Deal Tracks</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p class="text-decoration-line-through text-black-50">
-                      Automated Voicemails
-                    </p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center opacity-25">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p class="text-decoration-line-through text-black-50">
-                      Post-call Automation
-                    </p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <!-- card-3 -->
-            <div class="card mb-4 rounded-3 shadow-lg">
-              <!-- card-header -->
-              <div class="card-header mt-2 py-3">
-                <h3 class="my-0 display-3">Enterprise</h3>
-                <p class="mt-2 fs-6">
-                  Customize without limits and access unrivaled support lorem
-                  ipsum
-                </p>
-              </div>
-              <!-- card-body -->
-              <div class="card-body">
-                <h1 class="card-title pricing-card-title mb-3">
-                  <strong class="display-1">$39,90 </strong>
-                  <small class="text-muted">/month</small>
-                </h1>
-                <button type="button" class="w-100 btn btn-lg btn-primary mb-3">
-                  Try for Free
-                </button>
-                <p class="text-muted">
-                  Free 14-day trial. No credit card required.
-                </p>
-              </div>
-              <hr class="divider" />
-              <!-- card-footer -->
-              <div class="card-footer">
-                <ul class="list mt-3 mb-4">
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>Unlimited team members</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>Marketing Automation</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>25 Campaign Workflows</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>20 Nodes Per Campaigns</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>15 Automation Rules (Triggers)</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>10 Plugins/Integrations</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>Marketing Automation</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>Custom Deal Tracks</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>Automated Voicemails</p>
-                  </li>
-                  <li class="mb-3 d-flex align-items-center">
-                    <i
-                      class="bi bi-check2 fs-1 me-2"
-                      style="color: var(--alienated)"
-                    ></i>
-                    <p>Post-call Automation</p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr class="divider mb-4">
-      </div>
-      <!-- need help -->
-      <div class="container">
-        <div class="row mb-5">
-          <h3 class="display-3 mb-3">
-            Need help choosing the right plan?
-          </h3>
-          <button class="w-100 btn btn-sm p-2 mb-3 btn-primary">Contact sales</button>
-          <button class="w-100 btn btn-sm p-2 btn-secondary">Compare plans</button>
-        </div>
-      </div>
-    </main>
-
-    <!-------------------
-     main end
     --------------------->
     <!-- Script -->
 
