Feat : Create main/.question-section

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -113,6 +113,7 @@
      main
     --------------------->
     <main class="main">
+      <!--Choose type plan  -->
       <section class="plan">
         <!-- plan-card -->
         <article class="plan-card">
@@ -454,7 +455,7 @@
           </div>
         </article>
         <!-- need help -->
-        <article class="plan-help">
+        <article class="plan-help pb-5">
           <div class="container">
             <div class="row mb-5">
               <h3 class="display-3 mb-3">Need help choosing the right plan?</h3>
@@ -466,6 +467,13 @@
               </button>
             </div>
           </div>
+        </article>
+      </section>
+      <!-- Asked question -->
+      <section class="question">
+        <article class="question-article container">
+          <h2 class="display-2 mt-5 mb-4 ">Frequently asked questions</h2>
+
         </article>
       </section>
     </main>
