--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="container">
         <nav class="navbar navbar-expand-lg py-3">
-          <a class="navbar-brand  " href="../practice-02/index.html">
+          <a class="navbar-brand me-5 " href="../practice-02/index.html">
             <img src="./img/logo.png" alt="logo" />
           </a>
           <button
