--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -23,8 +23,8 @@
     --------------------->
     <header class="header">
       <div class="container">
-        <nav class="navbar navbar-expand-lg py-3">
-          <a class="navbar-brand me-5 " href="../practice-02/index.html">
+        <nav class="navbar navbar-expand-lg row-cols-lg-2 py-3">
+          <a class="navbar-brand me-5 col-lg-auto" href="../practice-02/index.html">
             <img src="./img/logo.png" alt="logo" />
           </a>
           <button
@@ -51,7 +51,7 @@
                 aria-label="Close"
               ></button>
             </div>
-            <div class="offcanvas-body">
+            <div class="offcanvas-body col-lg-auto">
               <ul class="navbar-nav flex-grow-1 mb-5 mb-lg-0">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#"
