Feat : Update question-section

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -98,7 +98,7 @@
           <h1 class="display-1 text-black-50 pb-3">
             <a class="text-black">Choose the right plan</a> for your business
           </h1>
-          <p class="fs-6">
+          <p class="fs-5">
             Built with love for growing businesses. Check out the Yoora CRM
             pricing grid below. Switch between plans at any time.
           </p>
@@ -125,8 +125,9 @@
                   <!-- card-header -->
                   <div class="card-header mt-2 py-3">
                     <h3 class="my-0 display-3">Starter</h3>
-                    <p class="mt-2 fs-6">
-                      Get organized and set up simple sales processes lorem ipsum
+                    <p class="mt-2 fs-5">
+                      Get organized and set up simple sales processes lorem
+                      ipsum
                     </p>
                   </div>
                   <!-- card-body -->
@@ -244,7 +245,7 @@
                       "
                       >Recommended
                     </span>
-                    <p class="mt-2 fs-6">
+                    <p class="mt-2 fs-5">
                       Everything you need to boost performance and revenue lorem
                       ips
                     </p>
@@ -351,9 +352,9 @@
                   <!-- card-header -->
                   <div class="card-header mt-2 py-3">
                     <h3 class="my-0 display-3">Enterprise</h3>
-                    <p class="mt-2 fs-6">
-                      Customize without limits and access unrivaled support lorem
-                      ipsum
+                    <p class="mt-2 fs-5">
+                      Customize without limits and access unrivaled support
+                      lorem ipsum
                     </p>
                   </div>
                   <!-- card-body -->
@@ -471,10 +472,163 @@
       </section>
       <!-- Asked question -->
       <section class="question">
-        <article class="question-article container">
-          <h2 class="display-2 mt-5 mb-4 ">Frequently asked questions</h2>
-
-        </article>
+        <div class="container">
+          <article class="question-article">
+            <h2 class="display-2 mt-5 mb-4">Frequently asked questions</h2>
+            <div
+              class="accordion accordion-flush"
+              id="accordionPanelsStayOpenExample"
+            >
+              <div class="accordion-item">
+                <h4 class="accordion-header" id="panelsStayOpen-headingOne">
+                  <button
+                    class="accordion-button display-4 "
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseOne"
+                    aria-expanded="true"
+                    aria-controls="panelsStayOpen-collapseOne"
+                  >
+                  How Does Yoora CRM Compare To The Competition?
+                  </button>
+                </h4>
+                <div
+                  id="panelsStayOpen-collapseOne"
+                  class="accordion-collapse collapse show"
+                  aria-labelledby="panelsStayOpen-headingOne"
+                >
+                  <div class="accordion-body fs-6 ">
+                    Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating
+                    leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation,
+                    and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our
+                    competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them
+                    and increasing the overall price point.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h4 class="accordion-header" id="panelsStayOpen-headingTwo">
+                  <button
+                    class="accordion-button display-4 collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="panelsStayOpen-collapseTwo"
+                  >
+                  Can I Change Plans Or Cancel My Subscription At Any Time?
+                  </button>
+                </h4>
+                <div
+                  id="panelsStayOpen-collapseTwo"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="panelsStayOpen-headingTwo"
+                >
+                  <div class="accordion-body fs-6 ">
+                    Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating
+                    leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation,
+                    and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our
+                    competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them
+                    and increasing the overall price point.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h4 class="accordion-header" id="panelsStayOpen-headingThree">
+                  <button
+                    class="accordion-button display-4 collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseThree"
+                    aria-expanded="false"
+                    aria-controls="panelsStayOpen-collapseThree"
+                  >
+                  How Secure Is My Data With Yoora CRM?
+                  </button>
+                </h4>
+                <div
+                  id="panelsStayOpen-collapseThree"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="panelsStayOpen-headingThree"
+                >
+                  <div class="accordion-body fs-6 ">
+                    <strong>This is the third item's accordion body.</strong> It
+                    is hidden by default, until the collapse plugin adds the
+                    appropriate classes that we use to style each element. These
+                    classes control the overall appearance, as well as the
+                    showing and hiding via CSS transitions. You can modify any
+                    of this with custom CSS or overriding our default variables.
+                    It's also worth noting that just about any HTML can go
+                    within the <code>.accordion-body</code>, though the
+                    transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h4 class="accordion-header" id="panelsStayOpen-headingFour">
+                  <button
+                    class="accordion-button display-4 collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseFour"
+                    aria-expanded="false"
+                    aria-controls="panelsStayOpen-collapseFour"
+                  >
+                  What Is The Uptime Guarantee?
+                  </button>
+                </h4>
+                <div
+                  id="panelsStayOpen-collapsefour"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="panelsStayOpen-headingFour"
+                >
+                  <div class="accordion-body fs-6 ">
+                    <strong>This is the third item's accordion body.</strong> It
+                    is hidden by default, until the collapse plugin adds the
+                    appropriate classes that we use to style each element. These
+                    classes control the overall appearance, as well as the
+                    showing and hiding via CSS transitions. You can modify any
+                    of this with custom CSS or overriding our default variables.
+                    It's also worth noting that just about any HTML can go
+                    within the <code>.accordion-body</code>, though the
+                    transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h4 class="accordion-header" id="panelsStayOpen-heading">
+                  <button
+                    class="accordion-button display-4 collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#panelsStayOpen-collapseFive"
+                    aria-expanded="false"
+                    aria-controls="panelsStayOpen-collapseFive"
+                  >
+                  How Can I Add More Emails To My Account?
+                  </button>
+                </h4>
+                <div
+                  id="panelsStayOpen-collapseFive"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="panelsStayOpen-headingFive"
+                >
+                  <div class="accordion-body fs-6 ">
+                    <strong>This is the third item's accordion body.</strong> It
+                    is hidden by default, until the collapse plugin adds the
+                    appropriate classes that we use to style each element. These
+                    classes control the overall appearance, as well as the
+                    showing and hiding via CSS transitions. You can modify any
+                    of this with custom CSS or overriding our default variables.
+                    It's also worth noting that just about any HTML can go
+                    within the <code>.accordion-body</code>, though the
+                    transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
 
