ReFACTOR: Refactor format styles

--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -482,14 +482,14 @@
               <div class="accordion-item">
                 <h4 class="accordion-header" id="panelsStayOpen-headingOne">
                   <button
-                    class="accordion-button display-4 "
+                    class="accordion-button display-4"
                     type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#panelsStayOpen-collapseOne"
                     aria-expanded="true"
                     aria-controls="panelsStayOpen-collapseOne"
                   >
-                  How Does Yoora CRM Compare To The Competition?
+                    How Does Yoora CRM Compare To The Competition?
                   </button>
                 </h4>
                 <div
@@ -497,11 +497,15 @@
                   class="accordion-collapse collapse show"
                   aria-labelledby="panelsStayOpen-headingOne"
                 >
-                  <div class="accordion-body fs-6 ">
-                    Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating
-                    leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation,
-                    and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our
-                    competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them
+                  <div class="accordion-body fs-6">
+                    Yoora CRM offers the most affordable, comprehensive platform
+                    to manage the entire customer journey, from generating
+                    leads, to closing deals and supporting your customers. With
+                    a full suite of CRM, sales enablement, marketing automation,
+                    and help desk/customer support capabilities, it’s all you
+                    need to manage the entire customer lifecycle. Most of our
+                    competitors offer one or two of these functions as separate
+                    products, leaving you with the headache of integrating them
                     and increasing the overall price point.
                   </div>
                 </div>
@@ -516,7 +520,7 @@
                     aria-expanded="false"
                     aria-controls="panelsStayOpen-collapseTwo"
                   >
-                  Can I Change Plans Or Cancel My Subscription At Any Time?
+                    Can I Change Plans Or Cancel My Subscription At Any Time?
                   </button>
                 </h4>
                 <div
@@ -524,11 +528,15 @@
                   class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingTwo"
                 >
-                  <div class="accordion-body fs-6 ">
-                    Yoora CRM offers the most affordable, comprehensive platform to manage the entire customer journey, from generating
-                    leads, to closing deals and supporting your customers. With a full suite of CRM, sales enablement, marketing automation,
-                    and help desk/customer support capabilities, it’s all you need to manage the entire customer lifecycle. Most of our
-                    competitors offer one or two of these functions as separate products, leaving you with the headache of integrating them
+                  <div class="accordion-body fs-6">
+                    Yoora CRM offers the most affordable, comprehensive platform
+                    to manage the entire customer journey, from generating
+                    leads, to closing deals and supporting your customers. With
+                    a full suite of CRM, sales enablement, marketing automation,
+                    and help desk/customer support capabilities, it’s all you
+                    need to manage the entire customer lifecycle. Most of our
+                    competitors offer one or two of these functions as separate
+                    products, leaving you with the headache of integrating them
                     and increasing the overall price point.
                   </div>
                 </div>
@@ -543,7 +551,7 @@
                     aria-expanded="false"
                     aria-controls="panelsStayOpen-collapseThree"
                   >
-                  How Secure Is My Data With Yoora CRM?
+                    How Secure Is My Data With Yoora CRM?
                   </button>
                 </h4>
                 <div
@@ -551,7 +559,7 @@
                   class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingThree"
                 >
-                  <div class="accordion-body fs-6 ">
+                  <div class="accordion-body fs-6">
                     <strong>This is the third item's accordion body.</strong> It
                     is hidden by default, until the collapse plugin adds the
                     appropriate classes that we use to style each element. These
@@ -574,7 +582,7 @@
                     aria-expanded="false"
                     aria-controls="panelsStayOpen-collapseFour"
                   >
-                  What Is The Uptime Guarantee?
+                    What Is The Uptime Guarantee?
                   </button>
                 </h4>
                 <div
@@ -582,7 +590,7 @@
                   class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingFour"
                 >
-                  <div class="accordion-body fs-6 ">
+                  <div class="accordion-body fs-6">
                     <strong>This is the third item's accordion body.</strong> It
                     is hidden by default, until the collapse plugin adds the
                     appropriate classes that we use to style each element. These
@@ -605,7 +613,7 @@
                     aria-expanded="false"
                     aria-controls="panelsStayOpen-collapseFive"
                   >
-                  How Can I Add More Emails To My Account?
+                    How Can I Add More Emails To My Account?
                   </button>
                 </h4>
                 <div
@@ -613,7 +621,7 @@
                   class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingFive"
                 >
-                  <div class="accordion-body fs-6 ">
+                  <div class="accordion-body fs-6">
                     <strong>This is the third item's accordion body.</strong> It
                     is hidden by default, until the collapse plugin adds the
                     appropriate classes that we use to style each element. These
