--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
   <!-- index CSS -->
-  <link rel="stylesheet" href="./styles/main.css" />
+  <link rel="stylesheet" href="./styles/index.css" />
 </head>
 
 <body>
@@ -62,6 +62,42 @@
     <!-------------------
      Header end
     --------------------->
+
+
+
+
+
+    <!-------------------
+     main
+    --------------------->
+    <main class="main">
+        <!-- introduce -->
+        <section class="main-introduce pt-3 pt-lg-5 pb-3">
+            <div class="container">
+                <div class=" row-cols-lg-2 d-lg-flex justify-content-between align-items-end  " tabindex="-1">
+                    <h1 class="display-1 col-md-7 col-lg-6 text-black-50 pb-3 pb-lg-0">
+                        <a class="text-black">Choose the right plan</a> for your business
+                    </h1>
+                    <p class="fs-6  col-lg-3 pn-5 pb-lg-0">
+                        Built with love for growing businesses. Check out the Yoora CRM pricing grid below. Switch
+                        between plans at any time.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!--Choose type plan  -->
+
+        <!-- Asked question -->
+    </main>
+
+    <!-------------------
+     main end
+    --------------------->
+
+
+
+
+
     <!-- Script -->
 
     <!-- jquery/thu vien ho tro -->
