--- a/practice-03/index.html
+++ b/practice-03/index.html
@@ -86,10 +86,10 @@
             <!-- plan-card -->
             <article class="plan-card">
                 <div class="container">
-                    <div class="row row-cols-1 row-cols-md-3 mb-5">
-                        <div class="col">
-                            <!-- card-1 -->
-                            <div class="card mb-4 rounded-3 shadow-lg">
+                    <div class="row row-cols-1 row-cols-lg-3 gap-3 flex-gra flex-lg-nowrap  mb-5">
+                        <!-- card-1 -->
+
+                        <div class="col col-lg-4 mb-4 rounded-3 shadow-lg">
                                 <!-- card-header -->
                                 <div class="card-header mt-2 py-3">
                                     <h3 class="my-0 display-3">Starter</h3>
@@ -162,9 +162,10 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
-                            <!-- card-2 -->
-                            <div class="card mb-4 rounded-3 shadow-lg">
+                        </div>
+                        <!-- card-2 -->
+
+                        <div class="col col-lg-4 card mb-4 rounded-3 shadow-lg">
                                 <!-- card-header -->
                                 <div class="card-header mt-2 py-3">
                                     <h3 class="my-0 display-3">Professional</h3>
@@ -236,9 +237,10 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
-                            <!-- card-3 -->
-                            <div class="card mb-4 rounded-3 shadow-lg">
+                        </div>
+                        <!-- card-3 -->
+
+                        <div class="col col-lg-4 card mb-4 rounded-3 shadow-lg">
                                 <!-- card-header -->
                                 <div class="card-header mt-2 py-3">
                                     <h3 class="my-0 display-3">Enterprise</h3>
@@ -303,7 +305,6 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
                         </div>
                     </div>
                     <hr class="divider mb-4" />
